--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -1,10 +1,21 @@
 # PLEASE READ THE MAN PAGE BEFORE EDITING THIS FILE!
 # http://opensource.conformal.com/cgi-bin/man-cgi?spectrwm
-
-# colors for focussed and unfocussed window borders
 # NOTE: all colors in this file are in hex! see XQueryColor for examples
+
+# workspace_limit	= 22
+# focus_mode		= default
+# focus_close		= previous
+# focus_close_wrap	= 1
+# focus_default		= last
+# spawn_position		= next
+
+# window decoration
+# border_width		= 1
 # color_focus		= red
 # color_unfocus		= rgb:88/88/88
+
+# Remove window border when bar is disabled and there is only one window in workspace
+# disable_border		= 1
 
 # bar settings
 # bar_enabled		= 1
@@ -16,6 +27,7 @@
 # bar_action		= baraction.sh
 # bar_delay		= 1
 # bar_justify		= left
+# bar_format		= +N:+I +S <+D>+4<%a %b %d %R %Z %Y+8<+A+4<+V
 # bar_at_bottom		= 1
 # stack_enabled		= 1
 # clock_enabled		= 1
@@ -24,19 +36,16 @@
 # title_class_enabled	= 0
 # window_name_enabled	= 0
 # verbose_layout		= 1
-# focus_mode		= default
-# disable_border		= 1
-# border_width		= 1
 # urgent_enabled		= 1
 
-# spawn app
+# Spawn Applications
+# spawn_position	= last
 # program[term]		= xterm
 # program[screenshot_all]	= screenshot.sh full
 # program[screenshot_wind]	= screenshot.sh window
 # program[lock]		= xlock
 # program[initscr]	= initscreen.sh
 # program[menu]		= dmenu_run -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_border -sf $bar_color
-# spawn_term		= xterm
 
 # dialog box size ratio .3 >= r < 1
 # dialog_ratio		= 0.6
@@ -48,12 +57,14 @@
 
 # Launch applications in a workspace of choice
 # autorun		= ws[1]:xterm
-# autorun		= ws[2]:xxxterm http://www.openbsd.org
+# autorun		= ws[2]:xombrero http://www.openbsd.org
 
 # workspace layout
 # layout		= ws[1]:4:0:0:0:vertical
 # layout		= ws[2]:0:0:0:0:horizontal
 # layout		= ws[3]:0:0:0:0:fullscreen
+# layout		= ws[4]:4:0:0:0:vertical_flip
+# layout		= ws[5]:0:0:0:0:horizontal_flip
 
 # mod key, (windows key is Mod4) (apple key on OSX is Mod2)
 # modkey = Mod1
