--- a/debian/rules
+++ b/debian/rules
@@ -52,15 +52,15 @@ binary-arch: build
 rebuild-series:
 	@( \
 		SERIES=debian/patches/series; \
-		echo "# To rebuild this file, use \`debian/rules $@'" \
-			> $${SERIES}; \
-		for patch in debian/patches/U*.diff debian/patches/D*.diff; \
-		do \
-			test -f "$${patch}" || continue; \
-			patch=$$(basename $${patch}); \
-			echo $${patch} \
-				>> $${SERIES}; \
-		done; \
+		{ \
+			echo "# To rebuild this file, use \`debian/rules $@'"; \
+			for patch in debian/patches/U*.diff debian/patches/D*.diff; \
+			do \
+				test -f "$${patch}" || continue; \
+				patch=$$(basename $${patch}); \
+				echo $${patch}; \
+			done; \
+		} >$${SERIES}; \
 	)
 
 .PHONY: build clean binary binary-indep binary-arch rebuild-series
