--- a/debian/control
+++ b/debian/control
@@ -27,9 +27,10 @@ Architecture: any
 Provides: x-window-manager
 Replaces: scrotwm (<< 1.0.0-1~)
 Breaks: scrotwm (<< 1.0.0-1~)
-Depends: ${shlibs:Depends},
+Depends: suckless-tools,
+         ${shlibs:Depends},
          ${misc:Depends}
-Recommends: suckless-tools, xterm | x-terminal-emulator, xfonts-terminus
+Recommends: xterm | x-terminal-emulator, xfonts-terminus
 Description: dynamic tiling window manager
  spectrwm is a minimalistic window manager that tries to stay out of the
  way so that valuable screen real estate can be used for much more
