--- a/debian/control
+++ b/debian/control
@@ -20,7 +20,7 @@ Build-Depends: dpkg-dev (>= 1.16.1~),
 Standards-Version: 3.9.3
 Homepage: http://opensource.conformal.com/wiki/spectrwm
 Vcs-Git: git://anonscm.debian.org/collab-maint/spectrwm.git
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/spectrwm.git;a=summary
+Vcs-Browser: http://anonscm.debian.org/cgit/collab-maint/spectrwm.git/
 
 Package: spectrwm
 Architecture: any
