--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,7 @@ Source: spectrwm
 Section: x11
 Priority: optional
 Maintainer: Andrea Bolognani <eof@kiyuko.org>
-Build-Depends: dpkg-dev (>= 1.16.1~),
-               debhelper (>= 7),
+Build-Depends: debhelper (>= 7),
                libx11-dev,
                libx11-xcb-dev,
                libxcursor-dev,
