--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Build-Depends: debhelper (>= 9),
                libxcb-xtest0-dev,
                libxft-dev
 Standards-Version: 3.9.5
-Homepage: http://opensource.conformal.com/wiki/spectrwm
+Homepage: http://spectrwm.org/
 Vcs-Git: git://anonscm.debian.org/collab-maint/spectrwm.git
 Vcs-Browser: http://anonscm.debian.org/cgit/collab-maint/spectrwm.git/
 
