--- a/debian/control
+++ b/debian/control
@@ -29,12 +29,11 @@ Depends: suckless-tools,
          ${misc:Depends}
 Recommends: xterm | x-terminal-emulator, xfonts-terminus
 Description: dynamic tiling window manager
- spectrwm is a minimalistic window manager that tries to stay out of the
- way so that valuable screen real estate can be used for much more
- important stuff.
+ spectrwm is a small dynamic tiling window manager for X11.
  .
- It has sane defaults and does not require one to learn a language to do
- any configuration.
+ It tries to stay out of the way so that valuable screen real estate can
+ be used for much more important stuff. It has sane defaults and does not
+ require one to learn a language to do any configuration.
  .
- It was written by hackers for hackers and it strives to be small,
- compact and fast.
+ It is written by hackers for hackers and it strives to be small, compact
+ and fast.
